# poetry-demo

./: README.md  pyproject.toml
poetry_demo/: test.py
