[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["yu-yagishita <yu.yagishita1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
